--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Home Page</title>
 	<meta name="viewport" content="width-device-width, initial-scale=1.0">
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="style/style.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
 </head>
